# image_recommender

./: .gitignore  ImageLoader.ipynb  LICENSE  README.md  RGB_Hist.pkl  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
resources/: __init__.py  data_processing.py  database_operations.py  dimensionality.py  image_features.py  main.ipynb  similarity.py  visualization.py
test/: __init__.py  test_example.py
tests/: Embedding.pkl  Other_data.pkl  Path.pkl  test.py
